WIP Build scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "autoprefixer": "npx postcss ./build/css/index.css --use autoprefixer -d build/css/",
     "cleancss": "cleancss -o ./build/css/index.css ./build/css/index.css",
-    "stylus": "stylus styl/index.styl -o ./build/css/index.css",
+    "stylus": "stylus --include-css styl/index.styl -o ./build/css/index.css",
     "jade": "jade -H -o ./build ./",
     "folders": "mkdir -p build/css build/bower_components/jquery/dist build/bower_components/swipeshow",
     "copy": "cp -r images photos js build/ && cp ./bower_components/jquery/dist/jquery.min.js ./build/bower_components/jquery/dist/ && cp ./bower_components/swipeshow/jquery.swipeshow.min.js ./build/bower_components/swipeshow/",
