--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "autoprefixer": "npx postcss ./build/css/index.css --use autoprefixer -d build/css/",
-    "cleancss": "cleancss -o ./build/css/index.css ./build/css/index.css",
-    "stylus": "stylus --include-css styl/index.styl -o ./build/css/index.css",
-    "jade": "jade -H -o ./build ./",
-    "folders": "mkdir -p build/css build/bower_components/jquery/dist build/bower_components/swipeshow",
-    "copy": "cp -r images photos js build/ && cp ./bower_components/jquery/dist/jquery.min.js ./build/bower_components/jquery/dist/ && cp ./bower_components/swipeshow/jquery.swipeshow.min.js ./build/bower_components/swipeshow/",
-    "clean": "rm -fr ./build/",
-    "build": "npm run clean && npm run folders && npm run jade && npm run stylus && npm run autoprefixer && npm run cleancss && npm run copy"
+    "cleancss": "cleancss -o build/css/index.css build/css/index.css",
+    "stylus": "stylus --include-css styl/index.styl -o build/css/index.css",
+    "jade": "jade -H -o build ./",
+    "uglifyjs": "uglifyjs-folder js -eo build/js",
+    "libs": "uglifyjs bower_components/jquery/dist/jquery.min.js bower_components/swipeshow/jquery.swipeshow.min.js -o build/js/libs.min.js -c",
+    "js": "npm run uglifyjs && npm run libs",
+    "folders": "mkdir -p build/css build/js",
+    "copy": "cp -r images photos build/",
+    "clean": "rm -fr build/",
+    "css": "npm run stylus && npm run autoprefixer && npm run cleancss",
+    "build": "npm run clean && npm run folders && npm run jade && npm run js && npm run css && npm run copy"
   },
   "keywords": [
     "uneed",
@@ -30,6 +34,7 @@
     "jade": "^1.11.0",
     "jade-watch": "^0.1.1",
     "postcss-cli": "^4.1.1",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "uglifyjs-folder": "^1.2.0"
   }
 }
