--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "autoprefixer": "npx postcss ./build/css/index.css --use autoprefixer -d build/css/",
     "cleancss": "cleancss -o build/css/index.css build/css/index.css",
-    "stylus": "stylus --include-css -w styl/index.styl -o build/css/index.css",
-    "jade": "jade -w -H -o build ./",
+    "stylus": "stylus --include-css styl/index.styl -o build/css/index.css",
+    "jade": "jade -H -o build ./",
     "uglifyjs": "uglifyjs-folder js -eo build/js",
     "libs": "uglifyjs bower_components/jquery/dist/jquery.min.js bower_components/swipeshow/jquery.swipeshow.min.js bower_components/jquery_appear/jquery.appear.js -o build/js/libs.min.js -c",
     "js": "npm run uglifyjs && npm run libs",
