--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = tab
-insert_final_newline = true
+insert_final_newline = false
 trim_trailing_whitespace = false
 
 [*.md]
