--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "swipeshow": "^0.10.9",
-    "jquery_appear": "^0.3.6"
+    "jquery_appear": "^0.3.6",
+    "animate.css": "^3.5.2"
   }
 }
