--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "swipeshow": "^0.10.9",
     "jquery_appear": "^0.3.6",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "waypoints": "^4.0.1"
   }
 }
